A.F....... [ZBX-5074] redesign configuration of action (Eduard)
..F....... [ZBX-1357] updated Brazilian Portuguese, French, Japanese, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-1019] updated jQuery to 1.7.2 and jQuery UI to 1.8.20 (Vedmak)
..F....... [ZBXNEXT-829] Zabbix server availability check (Vedmak)

Bug fixes:
..F....... [ZBX-2854] fixed table sorting icon positioning (Toms)
..F....... [ZBX-5107] fixed in popup it is possible to select more than once (Toms)
...G...... [ZBX-5094] removed trailing backslash from return value {#FSNAME} by Windows agent (Sasha)
..F....... [ZBX-5188] fixed incorrect graph themes being used for graphs from child nodes (Pavels)
A......... [ZBX-5155] fixed importing of triggers with dependencies from 1.8 to 2.0 (Pavels)
..F....... [ZBX-5184] fixed Zabbix doesn't show availability for all type except agent items in object views of host (Toms)
..F....... [ZBX-5136] fixed xml import can broke on short empty tag syntax (Vedmak)
..F....... [ZBX-5154] fixed host group tab doesn't add selected hosts to host group (Toms)
A.F....... [ZBX-5176] fixed trigger events not being deleted when changing it to a templated trigger (Pavels)
........S. [ZBX-5042] fixed server crash while synchronization host_inventory table (Sasha)
........S. [ZBX-5042] fixed possible sql errors while node synchronization (Sasha)
..F....... [ZBX-5133] fixed error when adding the first map element (Toms)
A......... [ZBX-5115] fixed API object names being case sensitive (Pavels)
....I..... [ZBX-5058] init.d scripts updated for Zabbix 2.0 (Andris)
..F....... [ZBX-5143] fixed regular expression delete action ignores cancelation in confirmation dialog (Vedmak)
........S. [ZBX-5148] fixed linking of item prototypes by a discovery rule (Sasha)
....I..... [ZBX-5061] fixed Oracle SQL errors when executing data.sql (Sasha)
........S. [ZBX-5123] fixed Oracle SQL error while linking a template by server (Sasha)